[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["AlexeiShigaev <9212010568@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
motor = "^3.4.0"
asyncio = "^3.4.3"
pydantic = "^2.7.4"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
telethon = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
